fixed all the divs in the main content on landing page, now it is fully scaleble and wong overlapp eachother

--- a/Source Code/styles.css
+++ b/Source Code/styles.css
@@ -79,131 +79,137 @@ h2 {
     width: 15vw;
     display: flex;
 }
+.main-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 10vw;
+}
 
 .banner {
     width: 100%;
-    height: 30px;
+    height: 25vh;
+    width: 100vw;
     color: rgb(0, 0, 0);
-    margin-top: 2vh;
+    margin-top: 7vh;
     text-align: center;
+    margin-bottom: 7vh;
 }
-.hovedbilde{
+
+.information-box {
     position: relative;
-    top: -25vw; 
-    width: auto;
-    height: 40vh;
-    border-radius: 10px;
-    margin-left: 34vw;
+    width: 20rem;
+    margin: 0 2rem;
+    height: 22rem;
+    background-color: rgb(147, 170, 165);
+    border-radius: 1vh;
+    overflow: scroll;
 }
-.box-text{
+.services {
+    position: relative;
+    background-color: rgb(147, 170, 165);
+    border-radius: 1vh;
+    text-align: center;
+    overflow: scroll;
+    padding: 1em;
+}
+
+.services ul li {
+    list-style: none;
+    margin: 1em;
+}
+
+.hovedbilde {
+    display: flex;
+    height: 20rem;
+    width: 35rem;
+    justify-content: center;
+    overflow: hidden;
+    margin: 4vh 2rem;
+}
+
+.hovedbilde img {
+    border-radius: 1vh;
+}
+
+.review {
+    color: rgb(73, 65, 65);
     font-size: 95%;
     line-height: 1.5;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    height: 100%;
-}
-.review-box{
-    position: absolute;
-    top: 35vh;
-    width: 23vw; 
-    height: 70%;
-    background-color: rgb(171, 226, 213);
-    border-radius: 1vh;
-    right: 2vw;
-    overflow: scroll;
+    padding: 4vh;
 }
 
-.reviews {
+.review-box {
     position: relative;
-    color: rgb(73, 65, 65);
-    text-align: center;
-    padding-bottom: 3px;
-    margin-bottom: 100px;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-top: 10px
+    width: 22rem;
+    height: 30rem;
+    background-color: rgb(171, 226, 213);
+    border-radius: 1vh;
+    margin: 0 2rem;
+    overflow: scroll;
 }
 
 .reviews p {
     margin-bottom: 1em;
-    /* Adds space between paragraphs */
-}
-.services{
-    position: relative;
-    top: 9vh; 
-    left: 2vw; 
-    width: 23vw; 
-    height: 50vh; 
-    background-color: rgb(147, 170, 165);
-    border-radius: 1vh;
-    text-align: center;
-    overflow: scroll;
 }
 
-.services ul li { 
-    list-style: none;
-    margin: 0 10px;
-    margin: 1em;
-}
-.content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-.review-box, .information-box{
-    flex: 10 10 65%; 
-    margin: 20px;
-    margin-bottom: 100px; /* Increase this value as needed */
-}
+
 
 .locations {
-    display: inline-flex;
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    width: 100%;
+    margin-top: 10vh;
 }
 
 .nearbyLocations {
-    height: 50px;
+    height: 5vh;
     width: 100%;
-    font-size: 20px;
+    font-size: 2vh;
     cursor: default;
-    border-top: 5px solid rgb(0, 0, 0);
-    padding-top: 45px;
+    border-top: 0.5vh solid rgb(0, 0, 0);
+    padding-top: 4.5vh;
 }
+
 .nearbyLocations ul {
-    display: inline-flex;
-    font-size: 20px;
+    display: flex;
+    font-size: 2vh;
 }
+
 .nearbyLocations ul li {
     list-style: none;
 }
-.locations-img{
+
+.locations-img {
     width: 100%;
-    height: 100px;
+    height: 10vh;
     border-radius: 50%;
-    margin-top: 40px;
+    margin-top: 4vh;
 }
-.locations-img img{
-margin-left: 135px;
-height: 400px;
-width: auto;
+
+.locations-img img {
+    margin-left: 13.5vw;
+    height: 40vh;
+    width: auto;
+    margin-bottom: 10vh;
 }
 
 .footer {
     align-content: baseline;
     position: fixed;
-    bottom: 0; 
-    left: 0; 
+    bottom: 0;
+    left: 0;
     z-index: 10;
     width: 100%;
-    height: 75px;
+    height: 8vh;
     background-color: lightgray;
     color: black;
-    font-size: 110%;
-    padding: 10px 0 0 10px;
+    font-size: 2vh;
 }
 
 /* Membership, login, register */
